<resources>
    <string name="app_name">Aaltus</string>
    <string name="starting_email">Starting email client...</string>
    <string name="author_email">dms.jonathan@gmail.com</string>
    <string name="getting_log">Getting log...</string>
    <string name="get_log_failed">Could not read the log. Perhaps you are on a T-Mobile Pulse (Huawei U8220) where logcat fails (complain to Huawei about it?) Meanwhile, send an ordinary bug report to {0}, describing what you did and what happened, and I may still be able to help you.</string>
    <string name="back_button_text">Back</string>
    <string name="string_action_language_eng">English</string>
    <string name="string_action_language_fr">Français</string>
    <string name="string_action_language_es">Español</string>
    <string name="string_action_language_ge">Deutsch</string>
    <string name="exit_dialog_title">Exit?</string>
    <string name="exit_dialog_message">Press yes</string>
    <string name="soundemissionp1">D’où provient le son? Quelle est son origine?\n\nLa perturbation d’un milieu, que ce soit l’air ou l’eau, est à l’origine du son. Lorsque le milieu de propagation du son est l’air, cette perturbation physique provoque des variations localisées de la pression atmosphérique. Ces variations de pression sont très rapides, contrairement aux fluctuations lentes de la pression atmosphérique causées par la météo. Puisque l’oreille humaine est sensible uniquement aux variations rapides de la pression, il nous est donc possible de capter ce son et de l’interpréter. \n\nComment produit-on ce son/cette perturbation?\n\nUn exemple simple de production du son consiste à insérer un piston dans un tube. </string>
    <string name="soundemissionp2">Lorsque le piston se déplace vers la droite, la couche d’air près du piston se retrouve comprimée. Cette couche d’air, sous compression, va à son tour comprimer la couche d’air à sa droite et ainsi de suite. Le déplacement de cette zone de compression s’effectue à la vitesse du son, soit 343 mètres par seconde à l’air ambiant. Cette vitesse est environ 10 fois plus grande que celle de la vitesse maximale du guépard.\n\nDès que le piston se retire du tube, la pression de la couche d’air adjacente au piston diminue pour se retrouver sous la pression atmosphérique normale : on parle de raréfaction de la pression.\n\nAinsi, si le piston effectue sans cesse son mouvement de va-et-vient, plusieurs zones de compression et de raréfaction de pression sortiront du tube. Nos oreilles seront en mesure de capter ces variations de pression et il sera alors possible d’entendre un son sortant de ce tube. Ce son changera selon la vitesse du piston.\n\nDans le même ordre d’idées, la guitare et le tambour produisent des perturbations dans leur environnement. Cependant, ces perturbations sont plus complexes que celles d’un mouvement simple de piston.\n\nPourquoi une personne à 10 km de moi n’entend-elle pas le son de mon tambour ?\n\nDans la majorité des cas, le son se propage de façon sphérique autour de la source, comme observé sur la guitare et le tambour. Dans le monde 3D de cette application, si on relie toutes les sphères bleues de même grosseur, c\'est-à-dire tous les points où la pression est identique, la forme sphérique du front d\'onde ressort.</string>
    <string name="soundemissionp3">La puissance émise par la source est répartie uniformément sur toute la surface du front d’onde. Donc, plus on s’éloigne de la source, plus la sphère grossit et plus la puissance est répartie sur une grande surface. Cette répartition de la puissance a pour effet de diminuer l’intensité du son au fur et à mesure que l’on s’éloigne de la source. Ainsi, après une distance donnée, il n’est plus possible d’entendre le son de son interlocuteur. De plus, cette atténuation de l’intensité est accentuée par l’absorption des ondes par le sol et l’air. </string>
    <string name="soundcapturep1">À la section précédente, il a été question de création du son puis de sa propagation. Cette propagation du son pose problème, puisque l’intensité sonore diminue sur de courtes distances. Or, la radio peut apporter une solution à ce problème à la condition que l’énergie acoustique, c’est-à-dire l’énergie contenue dans le son, soit d’abord transformée en énergie électrique. Pour y parvenir, on utilise des transducteurs, appelés communément microphones.\n\nLes premiers microphones furent développés par Bell, Edison, Hughes et plusieurs autres inventeurs vers la fin du 19e siècle. De nos jours, il existe plusieurs types de microphones tels que les microphones au carbone, piézoélectrique, électrostatique et le microphone dynamique à bobine mobile. Ce dernier est probablement l’un des plus répandus, puisqu’il est robuste et fiable.</string>
    <string name="receptionp1">Maintenant que le signal est modulé et amplifié, il faut une méthode ou un objet permettant la diffusion de cette information dans les airs. Vous l’aurez deviné, l’antenne vient jouer ce rôle. Elle permet de transmettre l’information (signal) et également de le recevoir. En particulier, les antennes de transmission émettront des ondes radio alors que les antennes de réception les interprèteront.\n\nEst-ce qu’une onde radio est identique à une onde sonore?\n\nOn a vu précédemment que l\'onde sonore est en réalité des zones de compressions et de raréfaction de la pression dans l’air ou l’eau. Pour que le son se propage, il est nécessaire d’être dans un milieu composé de matières. Ainsi, le son ne peut se propager dans le vide. On dit alors que l’onde sonore est une onde mécanique. En revanche, l’onde radio n’est pas une onde mécanique, mais une onde électromagnétique.\n\nQu’est-ce qu’une onde électromagnétique?\n\nLe terme « électromagnétique » renferme deux mots distincts : électrique et magnétique. L’onde électromagnétique fait intervenir un champ électrique ainsi qu’un champ magnétique. Ces champs vont exercer des forces sur les charges (électrons) contenues dans les matériaux conducteurs, tout comme le champ gravitationnel applique une force entre vous et la terre.\n\nCes ondes sont pratiquement partout autour de nous. La lumière en est un exemple concret. En effet, la lumière peut être considérée comme une onde électromagnétique. On peut alors affirmer que le soleil émet plusieurs ondes électromagnétiques. Dans ce cas, l’œil humain est capable de détecter ces ondes. Cela ne signifie pas pour autant que l’on peut détecter et interpréter les ondes radio avec notre œil. En effet, bien que l’onde radio soit une onde électromagnétique, il n’est pas possible de la voir. L’élément qui différencie la lumière de l’onde radio est la fréquence. L’illustration ci-dessous représente le spectre électromagnétique et montre les types d’ondes électromagnétiques et leurs fréquences correspondantes.</string>
    <string name="receptionp2">Comment sont créées les ondes radio?\n\nL’antenne trouve son utilité en produisant ces ondes radio. On sait qu’une antenne est constituée essentiellement de métaux, et par conséquent, il est possible d\'y faire circuler un courant électrique à l’intérieur. Rappelons que le courant électrique provient du débit des charges (électrons) dans un conducteur. Par contre, le passage d’un simple courant électrique dans une antenne n’est pas suffisant. En effet, selon les équations de Maxwell, il est possible d’irradier une onde électromagnétique uniquement lorsque le courant varie dans le temps. Ainsi, la nature du signal passe de courant électrique à ondes électromagnétiques.</string>
    <string name="receptionp3">Alors comment se propagent ces ondes radio?\n\nOn sait maintenant qu’une onde radio est en réalité la propagation d’un champ magnétique et électrique. Cependant, ces ondes ne peuvent pas se propager à l’infini sur Terre puisque plusieurs obstacles interfèrent avec celles-ci. Les phénomènes physiques tels que la réflexion, l’absorption, la diffraction et la réfraction vont influencer le parcours d’une onde électromagnétique. Ces phénomènes peuvent survenir dans l’atmosphère, ce qui peut jouer un rôle important dans la transmission d’ondes. Par exemple, pour des ondes radio AM, les stations émettrices sont contraintes de réduire fortement leur puissance la nuit, car les ondes se propagent plus aisément la nuit que le jour, les conditions atmosphériques n’étant pas les mêmes le jour et la nuit. Vous comprendrez qu\'en laissant la même puissance, les stations radio ayant la même fréquence d’opération s’interféreront. Même si les ondes radio peuvent être réfléchies ou absorbées, il n’en demeure pas moins qu’elles se propagent très rapidement. En fait, elles se répandent à la même vitesse que la lumière, puisque la lumière et les ondes radio sont toutes les deux une onde électromagnétique obéissant aux mêmes principes physiques. Rappelons que la vitesse de la lumière est de 300 millions de mètres par seconde, soit 1 million de fois plus rapidemment que le son et 10 millions de fois plus vite que la vitesse maximale du guépard.</string>
    <string name="receptionp4">Que se passe-t-il à l’antenne de réception?\n\nÀ la réception, l’inverse de la transmission se produira, c’est-à-dire que l’onde électromagnétique sera convertie en signal électrique par l’antenne. En effet, les champs forceront les charges dans l’antenne à se déplacer de sorte qu’un courant électrique s’établisse. Ceci ne veut pas pour autant dire qu’il est possible d’écouter notre poste de radio. Il reste encore quelques étapes avant de pouvoir entendre votre animateur favori.</string>
    <string name="screen_start_button">Commencer</string>
    <string name="screen_tutorial_button">Tutoriel</string>
    <string name="screen_credits_button">Crédits</string>
    <string name="screen_exit_button">Quitter</string>
    <string name="Credits">Crédits</string>
    <string name="Responsable">Responsable du produit</string>
    <string name="David">David De Grandpré</string>
    <string name="Programmeurs">Programmeurs</string>
    <string name="Hugo">Hugo Deschamps</string>
    <string name="Jonathan">Jonathan Desmarais</string>
    <string name="Alexandre">Alexandre Hamel</string>
    <string name="JC">Jean-Christophe Lavoie</string>
    <string name="Thibault">Thibault Mainand</string>
    <string name="Christian">Christian Methot</string>
    <string name="Recherchiste">Recherchiste</string>
    <string name="Simon">Simon Landry</string>
    <string name="Artiste">Artiste</string>
    <string name="Correctrice">Correctrice</string>
    <string name="Photographe">Photographe</string>
    <string name="Laurens">Laurens Coderre</string>
    <string name="Professeurs">Professeurs</string>
    <string name="Ahmed">Ahmed Khoumsi</string>
    <string name="Ruben">Ruben Gonzalez-Rubio</string>
</resources>