<?xml version="1.0" encoding="utf-8"?>

<!--Action bar menu for tablet device-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    >
    <item android:id="@+id/item_action_language_eng"
          android:icon="@drawable/ic_action_language_eng"
          android:title="@string/string_action_language_eng"
          app:showAsAction="always|withText"/>
    <item android:id="@+id/item_action_language_fr"
          android:icon="@drawable/ic_action_language_fr"
          android:title="@string/string_action_language_fr"
          app:showAsAction="always|withText"/>
    <item android:id="@+id/item_action_language_es"
          android:icon="@drawable/ic_action_language_es"
          android:title="@string/string_action_language_es"
          app:showAsAction="always|withText"/>
    <item android:id="@+id/item_action_language_ge"
          android:icon="@drawable/ic_action_language_ge"
          android:title="@string/string_action_language_ge"
          app:showAsAction="always|withText"/>
</menu>