<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:myapp="http://schemas.android.com/apk/res/com.aaltus.teslaradio"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10dp"

        >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/test_layout"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receptionp1"
                style="@style/InformativeMenuTextStyle"
                />
        <ImageView
                android:id="@+id/spectre_image"
                style="@style/ImageSize"
                android:layout_gravity="center"
                android:src="@drawable/spectre_electromagnetique"

                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receptionp2"
                style="@style/InformativeMenuTextStyle"
                />
        <ImageView
                android:id="@+id/antenne_image"
                style="@style/ImageSize"
                android:layout_gravity="center"
                android:src="@drawable/symbole_antenne"

                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receptionp3"
                style="@style/InformativeMenuTextStyle"
                />

        <ImageView
                android:id="@+id/vitesse_image"
                style="@style/ImageSize"
                android:layout_height = "wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/vitesse_lumiere"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receptionp4"
                style="@style/InformativeMenuTextStyle"
                />

    </LinearLayout>
</ScrollView>
